<resources>
    <string name="app_name">ResistanceIsFutile</string>
    <string name="menu">MENU</string>
    <string name="title">Resistance Is Futile</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="learning_mode">LEARNING MODE</string>
    <string name="new_game">NEW GAME</string>
    <string name="continue_game">CONTINUE</string>
    <string name="tlo">circuit board</string>
    <string name="how_to_play_image">how to play</string>
    <string name="powrot_do_menu">back to menu</string>
    <string name="resistor">resistor</string>
    <string name="band1">band1</string>
    <string name="band2">band2</string>
    <string name="band3">band3</string>
    <string name="band4">band4</string>
    <string name="ohmmeter">ohmmeter</string>
    <string name="resistance">resistance</string>
    <string name="resistance_number">8888888</string>

    <string name="color_unset">empty</string>
    <string name="color_black">black</string>
    <string name="color_brown">brown</string>
    <string name="color_red">red</string>
    <string name="color_orange">orange</string>
    <string name="color_yellow">yellow</string>
    <string name="color_green">green</string>
    <string name="color_blue">blue</string>
    <string name="color_purple">purple</string>
    <string name="color_grey">grey</string>
    <string name="color_white">white</string>
    <string name="color_gold">gold</string>
    <string name="color_silver">silver</string>

    <string name="invalid_band_color">Band %1$d can\'t be %2$s</string>
    <string name="unavailable_band_color">You can\'t set band %1$d to %2$s yet</string>
    <string name="resistance_value_missing">--------</string>
    <string name="resistance_value">%1$s %2$sΩ</string>
    <string name="tolerance_value_unknown">\?</string>
    <string name="tolerance_value">±%1$s%%</string>
    <string name="given_resistance">%1$s %2$sΩ</string>
    <string name="congratulations">CONGRATULATIONS! Increasing difficulty (level %1$d)</string>
    <string name="wrong_answer">Wrong answer - try again</string>

    <string name="goal">YOUR GOAL</string>
    <string name="label_resistance">RESISTANCE BANDS</string>
    <string name="label_multiplier">MULTIPLIER BAND</string>
    <string name="label_tolerance">TOLERANCE BAND</string>
    <string name="meter_resistance">SET RESISTANCE</string>
    <string name="meter_tolerance">TOLERANCE</string>
    <string name="meter_switch">CHECK HERE</string>
    <string name="buttons_resistance">COLORS FOR RESISTANCE BANDS</string>
    <string name="buttons_tolerance">COLORS FOR MULTIPLIER BAND</string>
</resources>